# VEDA_MiniProject1

./: .gitignore  CMakeLists.txt  README.md  a.out  customer.cpp  customer.h  customerManager.cpp  customerManager.h  item.cpp  item.h  itemManager.cpp  itemManager.h  main.cpp  mainMenu.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 이슈-생성-📝.md
include/: customer.h  customerManager.h  item.h  itemManager.h  mainMenu.h
src/: .customer.cpp.swp  .mainMenu.cpp.swp  customer.cpp  customerManager.cpp  item.cpp  itemManager.cpp  main.cpp  mainMenu.cpp
test/: customerManagerTest.cpp  itemManagerTest.cpp
